# Hork-Source

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md  ThirdParty.md  ThridParty.md  hork_config.cmake
BuildTools/: CMakeLists.txt
BuildTools/EmbedTool/: CMakeLists.txt  EmbedTool.cpp
Engine/: CMakeLists.txt
Engine/Assets/: Asset.h  AssetImporter.cpp  AssetImporter.h
Engine/Audio/: AudioBuffer.h  AudioChannel.cpp  AudioChannel.h  AudioDecoder.cpp  AudioDecoder.h  AudioDevice.cpp  AudioDevice.h  AudioMixer.cpp  AudioMixer.h  AudioSource.cpp  AudioSource.h  AudioStream.cpp  AudioStream.h  AudioTrack.cpp  AudioTrack.h  Freeverb.cpp  Freeverb.h  HRTF.cpp  HRTF.h
Engine/Canvas/: Canvas.cpp  Canvas.h  Paint.cpp  Paint.h  Transform2D.cpp  Transform2D.h
Engine/Cinematic/: Cinematic.cpp  Cinematic.h  GifPlayer.cpp  GifPlayer.h
Engine/Core/: AsyncJobManager.cpp  AsyncJobManager.h  Atomic.h  Base85.cpp  Base85.h  BaseMath.h  BaseTypes.h  BinaryStream.h  BinaryToC.cpp  BinaryToC.h  CPUInfo.cpp  CPUInfo.h  Color.cpp  Color.h  CommandContext.cpp  CommandContext.h  CommandProcessor.cpp  CommandProcessor.h  Compress.cpp  Compress.h  ConsoleBuffer.cpp  ConsoleBuffer.h  ConsoleVar.cpp  ConsoleVar.h  CoreApplication.cpp  CoreApplication.h  DOM.cpp  DOM.h  Delegate.h  Display.cpp  Display.h  Document.cpp  Document.h  EndianSwap.h  Event.h  Format.h  GarbageCollector.cpp  GarbageCollector.h  Guid.cpp  Guid.h  (+38 more)
Engine/ECS/: ECS.cpp  ECS.h
Engine/ECSRuntime/: BehaviorTree.cpp  CollisionModel.cpp  CollisionModel.h  CollisionModel_ECS.cpp  CollisionModel_ECS.h  EventHandler.cpp  EventHandler.h  GameEvents.cpp  GameEvents.h  JoltPhysics.h  NodeMotion.cpp  NodeMotion.h  PhotometricPool.cpp  PhotometricPool.h  PhysicsInterface.cpp  PhysicsInterface.h  ProceduralMesh.cpp  SceneGraph.cpp  SceneGraph.h  SkeletalAnimation.cpp  SkeletalAnimation.h  StateMachine.cpp  StateMachine.h  Utils.cpp  Utils.h  World.cpp  World.h
Engine/GameApplication/: FrameLoop.cpp  FrameLoop.h  GameApplication.cpp  GameApplication.h  GameSession.cpp  InputDefs.h  InputMappings.cpp  InputMappings.h  InputSystem.cpp  InputSystem.h  StateMachine.cpp  StateMachine.h  VirtualKey.cpp  VirtualKey.h
Engine/Geometry/: Bool.h  ConvexDecomposition.cpp  ConvexDecomposition.h  ConvexHull.cpp  ConvexHull.h  PolyClipper.cpp  PolyClipper.h  RawMesh.cpp  RawMesh.h  Skinning.cpp  Skinning.h  TangentSpace.cpp  TangentSpace.h  Triangulator.cpp  Triangulator.h  Utilites.cpp  Utilites.h  VertexFormat.h
Engine/Image/: Gif.cpp  Gif.h  Image.cpp  Image.h  ImageEncoders.cpp  ImageEncoders.h  PhotometricData.cpp  PhotometricData.h  RawImage.cpp  RawImage.h  SvgDocument.cpp  SvgDocument.h
Engine/MaterialGraph/: BaseObject.h  Factory.cpp  MaterialBinary.cpp  MaterialBinary.h  MaterialCode.h  MaterialGraph.cpp  MaterialGraph.h  MaterialSamplers.h
Engine/Materials/: Material.cpp  Material.h  MaterialManager.cpp
Engine/Math/: Angl.h  Bool.h  Complex.h  Plane.h  Quat.h  Shuffle.h  Transform.h  VectorMath.h
Engine/RenderCore/: Buffer.h  BufferView.h  Device.cpp  Device.h  DeviceObject.cpp  DeviceObject.h  FGCustomTask.h  FGRenderPass.cpp  FGRenderPass.h  FGRenderTargetCache.cpp  FGRenderTargetCache.h  FGRenderTask.h  FGResource.h  FrameGraph.cpp  FrameGraph.h  GPUSync.cpp  GPUSync.h  GenericWindow.cpp  GenericWindow.h  ImmediateContext.cpp  ImmediateContext.h  Pipeline.h  Query.h  ShaderModule.h  StaticLimits.h  SwapChain.h  Texture.h  TextureView.cpp  TextureView.h  VertexMemoryGPU.cpp  VertexMemoryGPU.h
Engine/Renderer/: AtmosphereRenderer.cpp  AtmosphereRenderer.h  BRDFGenerator.cpp  BRDFGenerator.h  BloomRenderer.cpp  BloomRenderer.h  CanvasRenderer.cpp  CanvasRenderer.h  CircularBuffer.cpp  CircularBuffer.h  ColorGradingRenderer.cpp  ColorGradingRenderer.h  CubemapGenerator.cpp  CubemapGenerator.h  DebugDrawRenderer.cpp  DebugDrawRenderer.h  DepthRenderer.cpp  DepthRenderer.h  EnvProbeGenerator.cpp  EnvProbeGenerator.h  ExposureRenderer.cpp  ExposureRenderer.h  FrameConstantBuffer.cpp  FrameConstantBuffer.h  FrameRenderer.cpp  FrameRenderer.h  FxaaRenderer.cpp  FxaaRenderer.h  GpuMaterial.cpp  GpuMaterial.h  IrradianceGenerator.cpp  IrradianceGenerator.h  LightRenderer.cpp  LightRenderer.h  NormalsRenderer.cpp  NormalsRenderer.h  OmnidirectionalShadowMapPool.cpp  OmnidirectionalShadowMapPool.h  PostprocessRenderer.cpp  PostprocessRenderer.h  (+24 more)
Engine/Resources/: ResourceManager.h  ResourceManager.inl  ResourceProxy.h  Resource_Animation.cpp  Resource_Font.cpp  Resource_Material.cpp  Resource_Material.h  Resource_Terrain.cpp  Resource_Texture.cpp  ThreadSafeQueue.h  Utils.cpp
Engine/Runtime/: AINavigationMesh.cpp  AINavigationMesh.h  AINavigationModule.cpp  AINavigationModule.h  ActorDefinition.cpp  ActorDefinition.h  Animation.cpp  Animation.h  AsyncJobManager.cpp  AsyncJobManager.h  AudioModule.cpp  AudioModule.h  AudioSystem.cpp  AudioSystem.h  BaseModule.h  BaseObject.cpp  BaseObject.h  CollisionModel.cpp  CollisionModel.h  CommandContext.cpp  CommandContext.h  DebugRenderer.cpp  DebugRenderer.h  Display.cpp  Display.h  EmbeddedResources.h  Engine.cpp  Engine.h  EntryDecl.h  EnvironmentMap.cpp  EnvironmentMap.h  Factory.h  Font.cpp  FrameLoop.cpp  FrameLoop.h  GameApplication.cpp  GameApplication.h  GameModule.cpp  GameModule.h  GameSession.cpp  (+49 more)
Engine/ShaderUtils/: ShaderCompiler.cpp  ShaderCompiler.h  ShaderLoader.cpp  ShaderLoader.h
Engine/UI/: UIAction.h  UIBrush.cpp  UIBrush.h  UIButton.cpp  UIButton.h  UIConsole.cpp  UIConsole.h  UICursor.cpp  UICursor.h  UIDecorator.cpp  UIDecorator.h  UIDesktop.cpp  UIDesktop.h  UIDockContainer.cpp  UIDockContainer.h  UIDockWidget.cpp  UIDockWidget.h  UIGrid.cpp  UIGrid.h  UIHitShape.cpp  UIHitShape.h  UIImage.cpp  UIImage.h  UILabel.cpp  UILabel.h  UILayout.h  UIManager.cpp  UIManager.h  UIObject.cpp  UIObject.h  UIScroll.cpp  UIScroll.h  UIShortcut.cpp  UIShortcut.h  UISlider.cpp  UISlider.h  UIText.cpp  UIText.h  UITextEdit.cpp  UITextEdit.h  (+6 more)
Engine/World/: BaseModule.h  (+28 more)
Hork/: CMakeLists.txt
Source/: .clang-format  CMakeLists.txt  Doxyfile  hork_config.cmake
(+4064 files in other folders)
