add_subdirectory(Deps)
add_subdirectory(Core)
add_subdirectory(Math)
add_subdirectory(ECS)
add_subdirectory(Geometry)
add_subdirectory(Image)
add_subdirectory(Audio)
add_subdirectory(RHI)
add_subdirectory(ShaderUtils)
add_subdirectory(RenderDefs)
add_subdirectory(MaterialGraph)
add_subdirectory(Renderer)
add_subdirectory(Runtime)
